--- a/src/style.css
+++ b/src/style.css
@@ -46,13 +46,31 @@ section {
   flex-direction: column;
 }
 
+.cards-list {
+    display: flex;
+    flex-wrap: nowrap;
+    gap: 20px;
+    overflow-x: auto;
+}
+
 .card {
   width: 175px;
   font-size: 12px;
+  flex: 0 0 auto;
+  display: flex;
+  flex-direction: column;
+  position: relative;
 }
 
 .card-img {
-  width: 300px;
+  width: 100%;
+  border-radius: 9px;
+  margin-bottom: 9px;
+}
+
+.card-title {
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .card-stats {
@@ -61,7 +79,11 @@ section {
 }
 
 .rating-star {
-  height: 50px;
+  height: 35px;
+}
+
+.card-price {
+    margin-top: auto;
 }
 
 .gray {
@@ -69,5 +91,15 @@ section {
 }
 
 .bold {
+    font-weight: bold;
+}
+
+.card--badge {
+    position: absolute;
+    top: 6px;
+    left: 6px;
+    background-color: white;
+    padding: 5px 7px;
+    border-radius: 2px;
     font-weight: bold;
 }
