--- a/src/style.css
+++ b/src/style.css
@@ -1,24 +1,51 @@
 h2 {
-    margin: 10px;
+  margin: 10px;
 }
 
 .menu {
-    /* background-color: red; */
-    width: 10%;
-    margin: 10px;
-    border-width: thick;
+  /* background-color: red; */
+  width: 10%;
+  margin: 10px;
+  border-width: thick;
 }
 
 .menu-items {
-    list-style: none;
-    cursor: pointer;
-    padding: 5px;
+  list-style: none;
+  cursor: pointer;
+  padding: 5px;
 }
 
 .menu-button {
-    background-color: aliceblue;
-    padding: 0.75rem;
-    margin: 1rem;
-    border: none;
-    border-radius: 10px 10px;
+  background-color: blueviolet;
+  padding: 0.75rem;
+  margin: 1rem;
+  border: none;
+  border-radius: 10px 10px;
+}
+
+.nav-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-end;
+  margin: auto;
+}
+
+.first-section {
+  padding: 1rem;
+  min-height: 500px;
+  max-width: 1200px;
+  width: 100%;
+  border: 5px solid black;
+  background-color: blue;
+}
+
+.second-section {
+  padding: 1rem;
+  min-height: 500px;
+  max-width: 1200px;
+  width: 100%;
+  border: 5px solid black;
+  margin: auto;
+  background-color: green;
 }
